--- a/docs/index.qmd
+++ b/docs/index.qmd
@@ -334,7 +334,7 @@ viewer_tags <- tags$div(
         { selector: 'node',
           style: {
             'shape': 'round-rectangle',
-            'background-color': '#f2ede1',
+            'background-color': '#f6f1e7',
             'label': 'data(label)',
             'font-size': 10,
             'color': '#1f1b16',
@@ -345,17 +345,17 @@ viewer_tags <- tags$div(
             'text-margin-y': -2,
             'text-halign': 'center',
             'text-valign': 'center',
-            'border-color': '#3c3730',
-            'border-width': 0.8,
+            'border-color': '#2f281e',
+            'border-width': 0.9,
             'width': 'label',
             'height': 'label',
             'padding': '4px'
           }
         },
         { selector: 'node[role *= \"Substrate\"]:not([role *= \"Kinase\"])',
-          style: { 'background-color': '#e9e2d6', 'border-color': '#5a5043' } },
+          style: { 'background-color': '#e1d7c7', 'border-color': '#6a5c4a' } },
         { selector: 'node[role *= \"Kinase\"]',
-          style: { 'background-color': '#f6f1e7', 'border-color': '#3f382f' } },
+          style: { 'background-color': '#fbf6ec', 'border-color': '#2a241b' } },
         { selector: 'node.qk', style: { 'border-width': 2.5 } },
         { selector: 'node.qs', style: { 'border-width': 2.5 } },
         { selector: 'edge',
@@ -375,9 +375,9 @@ viewer_tags <- tags$div(
           }
         },
         { selector: 'edge[evidence = \"Known (curated)\"]',
-          style: { 'line-color': '#1f1b16', 'target-arrow-color': '#1f1b16' } },
+          style: { 'line-color': '#16110c', 'target-arrow-color': '#16110c' } },
         { selector: 'edge[evidence = \"Novel (Cantley)\"]',
-          style: { 'line-color': '#5f564c', 'target-arrow-color': '#5f564c' } },
+          style: { 'line-color': '#7b6d5d', 'target-arrow-color': '#7b6d5d' } },
         { selector: 'edge[Likely_functional = \"Likely functional\"]',
           style: { 'line-style': 'solid' } },
         { selector: 'edge[Likely_functional = \"Other/Unknown\"]',
